--- a/go/css/style.css
+++ b/go/css/style.css
@@ -1,3 +1,15 @@
-h1.title{
+h1, h2, h3, h4, h5{
     text-align: center;
+}
+
+span.org{
+    color: orange;
+}
+
+span.grn{
+    color: seagreen;
+}
+
+span.blu{
+    color: lightskyblue;
 }
